# storage/api-docs/api-docs.json
@@ -5,7 +5,7 @@
         "description": "Laravel project to practice developing Rest API with L5 Swagger OpenApi",
         "contact": {
             "name": "Olivia Kristiani",
-            "email": "lelesyshy@gmail.com"
+            "email": "olivia.kristiani.422023025@civitas.ukrida.ac.id"
         },
         "version": "1.0",
         "x-logo": {
@@ -148,8 +148,60 @@
                 "tags": [
                     "book"
                 ],
-                "summary": "Display a listing of items",
+                "summary": "Display a listing of the items",
                 "operationId": "index",
+                "parameters": [
+                    {
+                        "name": "_page",
+                        "in": "query",
+                        "description": "current page",
+                        "required": true,
+                        "schema": {
+                            "type": "integer",
+                            "format": "int64",
+                            "example": 1
+                        }
+                    },
+                    {
+                        "name": "_limit",
+                        "in": "query",
+                        "description": "max item in a page",
+                        "required": true,
+                        "schema": {
+                            "type": "integer",
+                            "format": "int64",
+                            "example": 10
+                        }
+                    },
+                    {
+                        "name": "_search",
+                        "in": "query",
+                        "description": "word to search",
+                        "required": false,
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    {
+                        "name": "_publisher",
+                        "in": "query",
+                        "description": "search by publisher like name",
+                        "required": false,
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    {
+                        "name": "_sort_by",
+                        "in": "query",
+                        "description": "word to search",
+                        "required": false,
+                        "schema": {
+                            "type": "integer",
+                            "example": "latest"
+                        }
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "successful",
